--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <!-- Font Awesome -->
     <link rel="icon" type="image/x-icon" href="/images/brand-logo.png" />
-    <link rel="stylesheet" href="../dist/output.css" />
+    <link rel="stylesheet" href="./dist/output.css" />
     <title>weSource Management - Home</title>
   </head>
   <body class="font-poppins">
@@ -36,7 +36,7 @@
       >
         <div class="brand flex items-center justify-center">
           <img
-            src="../images/brand-logo.png"
+            src="./images/brand-logo.png"
             alt="weSource Consult"
             class="brand-logo h-[3rem] lg:h-[4rem] mr-2"
           />
@@ -76,7 +76,7 @@
     <section class="intro min-h-[calc(100vh-3.5rem)]">
       <div class="intro-img lg:h-[calc(100vh-6rem)] relative">
         <img
-          src="../images/bg-main.png"
+          src="./images/bg-main.png"
           alt=""
           class="bg-main lg:object-cover brightness-75 object-top w-full h-full"
         />
@@ -170,7 +170,7 @@
               <div
                 class="single-offer border-2 border-gray-300 h-full max-h w-[30%] p-2"
               >
-                <img src="../images/bg-main.png" alt="" />
+                <img src="./images/bg-main.png" alt="" />
                 <div class="offer-text mt-7 w-[90%] mx-auto">
                   <h3>Text goes here</h3>
                   <p>
@@ -185,7 +185,7 @@
               <div
                 class="single-offer border-2 border-gray-300 h-full max-h w-[30%] p-2"
               >
-                <img src="../images/bg-main.png" alt="" />
+                <img src="./images/bg-main.png" alt="" />
                 <div class="offer-text mt-7 w-[90%] mx-auto">
                   <h3>Text goes here</h3>
                   <p>
@@ -200,7 +200,7 @@
               <div
                 class="single-offer border-2 border-gray-300 h-full max-h w-[30%] p-2"
               >
-                <img src="../images/bg-main.png" alt="" />
+                <img src="./images/bg-main.png" alt="" />
                 <div class="offer-text mt-7 w-[90%] mx-auto">
                   <h3>Text goes here</h3>
                   <p>
@@ -222,7 +222,7 @@
             <!-- Single Offer -->
             <div id="1" class="offer-img min-w-full snap-start">
               <img
-                src="../images/bg-main.png"
+                src="./images/bg-main.png"
                 alt=""
                 class="min-w-full h-[70%] object-cover"
               />
@@ -238,7 +238,7 @@
             <!-- Single Offer -->
             <div id="2" class="offer-img min-w-full snap-start">
               <img
-                src="../images/bg-main.png"
+                src="./images/bg-main.png"
                 alt=""
                 class="min-w-full h-[70%] object-cover"
               />
@@ -254,7 +254,7 @@
             <!-- Single Offer -->
             <div class="offer-img min-w-full snap-start">
               <img
-                src="../images/bg-main.png"
+                src="./images/bg-main.png"
                 alt=""
                 class="min-w-full h-[70%] object-cover"
               />
@@ -287,7 +287,7 @@
       >
         <div class="footer-logo mt-5 flex items-center justify-center w-[90%]">
           <img
-            src="../images/brand-logo.png"
+            src="./images/brand-logo.png"
             alt=""
             class="h-[6rem] w-[10rem] grayscale mr-3"
           />
@@ -342,6 +342,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="app.js"></script>
+    <script src="./src/app.js"></script>
   </body>
 </html>
