--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="nav-links_container hidden lg:block">
           <ul class="text-xl flex space-x-7">
             <li><a href="index.html" class="nav-link nav-active">Home</a></li>
-            <li><a href="careers.html" class="nav-link">Careers</a></li>
+            <li><a href="./src/careers.html" class="nav-link">Careers</a></li>
             <li><a href="#services" class="nav-link">Our Services</a></li>
             <li><a href="#about" class="nav-link">About Us</a></li>
             <li><a href="#contact" class="nav-link">Contact Us</a></li>
@@ -62,7 +62,7 @@
       <div class="mobile-links ml-3 mt-2 lg:hidden">
         <ul class="text-lg">
           <li><a href="index.html" class="nav-link nav-active">Home</a></li>
-          <li><a href="careers.html" class="nav-link">Careers</a></li>
+          <li><a href="./src/careers.html" class="nav-link">Careers</a></li>
           <li><a href="#services" class="nav-link">Our Services</a></li>
           <li><a href="#about" class="nav-link">About Us</a></li>
           <li><a href="#contact" class="nav-link">Contact Us</a></li>
@@ -80,7 +80,7 @@
           alt=""
           class="bg-main lg:object-cover brightness-75 object-top w-full h-full"
         />
-        <a href="careers.html"
+        <a href="./src/careers.html"
           ><button
             class="career-btn text-white text-xl lg:text-2xl hover:bg-blue-400 border-2 border-white p-2 lg:py-3 lg:px-2 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]"
           >
