--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="nav-links_container hidden lg:block">
           <ul class="text-xl flex space-x-7">
-            <li><a href="index.html" class="nav-link nav-active">Home</a></li>
+            <li><a href="./index.html" class="nav-link nav-active">Home</a></li>
             <li><a href="./src/careers.html" class="nav-link">Careers</a></li>
             <li><a href="#services" class="nav-link">Our Services</a></li>
             <li><a href="#about" class="nav-link">About Us</a></li>
@@ -61,7 +61,7 @@
       <!-- NAV MOBILE LINKS -->
       <div class="mobile-links ml-3 mt-2 lg:hidden">
         <ul class="text-lg">
-          <li><a href="index.html" class="nav-link nav-active">Home</a></li>
+          <li><a href="./index.html" class="nav-link nav-active">Home</a></li>
           <li><a href="./src/careers.html" class="nav-link">Careers</a></li>
           <li><a href="#services" class="nav-link">Our Services</a></li>
           <li><a href="#about" class="nav-link">About Us</a></li>
