--- a/src/careers.html
+++ b/src/careers.html
@@ -49,9 +49,9 @@
 
         <div class="nav-links_container hidden lg:block">
           <ul class="text-xl flex space-x-7">
-            <li><a href="index.html" class="nav-link">Home</a></li>
+            <li><a href="../index.html" class="nav-link">Home</a></li>
             <li>
-              <a href="careers.html" class="nav-link nav-active">Careers</a>
+              <a href="./careers.html" class="nav-link nav-active">Careers</a>
             </li>
 
             <li><a href="#contact" class="nav-link">Contact Us</a></li>
@@ -62,9 +62,9 @@
       <!-- NAV MOBILE LINKS -->
       <div class="mobile-links ml-3 mt-2 lg:hidden">
         <ul class="text-lg">
-          <li><a href="index.html" class="nav-link">Home</a></li>
+          <li><a href="../index.html" class="nav-link">Home</a></li>
           <li>
-            <a href="careers.html" class="nav-link nav-active">Careers</a>
+            <a href="./careers.html" class="nav-link nav-active">Careers</a>
           </li>
           <li><a href="#contact" class="nav-link">Contact Us</a></li>
         </ul>
